--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,13 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "adafruit-circuitpython-crickit>=2.3.19",
+    "aiohttp>=3.11.18",
     "flask>=3.1.0",
     "lgpio>=0.2.2.0",
     "mcp>=1.9.0",
     "picamera2>=0.3.25",
+    "requests>=2.32.3",
+    "websockets>=15.0.1",
 ]
 
 [dependency-groups]
