--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,23 +5,20 @@ description = "Robot en devenir"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-   "websockets>=12.0", 
+    "websockets>=15.0.1",
 ]
 
 [project.optional-dependencies]
 robot = [
-    "adafruit-circuitpython-crickit>=2.3.19; platform_machine == 'armv7l'",
-    "lgpio>=0.2.2.0; platform_machine == 'armv7l'",
-    "picamera2>=0.3.25; platform_machine == 'armv7l'",
-    "fastapi>=0.110.0",
-    "uvicorn[standard]>=0.27.1",
+    "adafruit-circuitpython-crickit>=2.3.20",
+    "fastapi>=0.115.12",
+    "jinja2>=3.1.6",
+    "lgpio>=0.2.2.0",
+    "picamera2>=0.3.27",
+    "uvicorn>=0.34.2",
+    "uvloop>=0.21.0",
 ]
-mcp = [
-     "httpx>=0.27.0",
-     "mcp>=1.9.0",
-     "numpy>=1.24.0",
-     "opencv-python>=4.8.0",
-]
+mcp = []
 dev = [
     "pytest>=8.3.5",
     "ruff>=0.11.2",
