--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Robot en devenir"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "mcpsock>=0.1.5",
     "websockets>=15.0.1",
 ]
 
